# Bridge-for-Warp-Terminal

./: .env.example  .gitignore  README.md
bridge-ws-stub/: Cargo.toml
bridge-ws-stub/src/: main.rs
bridge-ws-stub/static/: index.html
