[package]
name = "bridge-ws-stub"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.39", features = ["full"] }
axum = { version = "0.7", features = ["ws"] }
tower = "0.5"
hyper = { version = "1.3", features = ["server", "http1"] }
portable-pty = "0.8"
futures = "0.3"
tokio-stream = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bytes = "1.6"
crossbeam-channel = "0.5.15"
tower-http = { version = "0.5", features = ["fs"] }
